test/invalid/NoParentClassName/NoParentClassName.plume
/**
 * @author 35237, Marcos Vasco
 */
class NoParentClassName extends is
  
  method calculate : (val : Boolean) -> Boolean is
    false